# Azure_NLP-SQL

./: .env copy.example  .env.example  AZURE_SETUP.md  README.md  pyproject.toml
data/: few_shot_examples.json  schema_metadata.json
data/evaluation/: latest_results.json  test_cases.json
data/seed/: 001_create_tables.sql  002_insert_data.sql
docs/: AZURE_CONFIG_CHECKLIST.md  SYSTEM_ARCHITECTURE_COMPLETE.md  architecture.md  kql_queries.md
evaluation/: __init__.py  evaluate.py
frontend/: app.js  index.html  styles.css
infra/: main.bicep  main.parameters.json
prompts/: metadata.json  system_prompt_v1.txt  system_prompt_v2.txt
scripts/: seed_few_shot_index.py
src/: __init__.py
src/api/: __init__.py  auth.py  dependencies.py  main.py  validation.py
src/harness/: __init__.py  cache.py  conversation.py  evaluator.py  executor.py  feedback.py  guardrails.py  input_processor.py  observability.py  orchestrator.py  prompt_manager.py  schema_filter.py  summarizer.py  validator.py
src/nlp_to_sql/: __init__.py  config.py  exceptions.py  models.py
src/schema/: __init__.py  metadata.py
tests/property/: __init__.py
tests/unit/: test_guardrails.py  test_input_processor.py  test_orchestrator.py  test_prompt_manager.py  test_schema_metadata.py  test_validation.py  test_validator.py
