[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp-to-sql-azure-harness"
version = "0.1.0"
description = "Multi-layer AI orchestration system that converts natural language questions into validated, safe SQL queries executed against Azure SQL Database"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "sqlglot>=20.0.0",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "azure-search-documents>=11.4.0",
    "azure-ai-language-conversations>=1.1.0",
    "aioodbc>=0.5.0",
    "openai>=1.6.0",
    "redis>=5.0.0",
    "opencensus-ext-azure>=1.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
